--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^1.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
